--- a/index.org
+++ b/index.org
@@ -314,7 +314,7 @@ Some rooms have special directions that connect to, these go to a specific cordn
  Room objects have a name, a dictonary telling which direction connects to which other room.
  Some rooms have something happen in them either you find a item, an omen, or an event. 
  This is stored in the card value.
-** Connecting Rooms
+** COMMENT Connecting Rooms
 The connect function binds two rooms together at the opposet edge.
 
 #+name: edge_table
@@ -347,11 +347,11 @@ The connect function binds two rooms together at the opposet edge.
           if direction in edge['direction']:
               edge['direction'] = direction
               edge['connection'] = room.get_coordnate()
-              self.remove_direction_from_avaliable(direction)
+              self.remove_direction_from_avaliable()
               return None
           else:
               pass
-      
+
 
 
   def bi_connect(self, direction, room):
@@ -372,18 +372,24 @@ The connect function binds two rooms together at the opposet edge.
 
 
 
-  def remove_direction_from_avaliable(self, direction):
+  def remove_direction_from_avaliable(self):
       """
       Lifted with some modification from:
       http://stackoverflow.com/a/4915964/1748672
       Thank you Paulo Scardine
       """
       try:
+          to_remove = ""
           for edge in self.edges:
-              if type(edge['direction']) == list:
-                  edge['direction'].remove(direction)
-              else:
-                  pass
+              if type(edge['direction']) == str:
+                  to_remove = edge['direction']
+          for edge in self.edges:
+              if type(edge['direction']) == str:
+                  break
+              elif type(edge['direction']) == list:
+                  edge['direction'].remove(to_remove)
+          return None
+
       except ValueError:
           pass #Mark the error in a log file later
       except AttributeError:
@@ -430,7 +436,9 @@ In the event that the room hasn't been discovered, it sends up an assertion erro
           if edge["direction"] == direction:
               assert edge["connection"] != None
               return edge["connection"]
-      
+          if direction in edge['direction']:
+              raise AssertionError
+
 
 
 
@@ -514,21 +522,8 @@ If the newly discoved room has an event in it, the player must stop moving and a
       def test_if_rooms_exist(self):
           list_of_rooms = [[r, self.MAP[r]] for r in self.MAP]
           self.assertNotEqual(len(list_of_rooms),0)
-          """
-          Test seems to have broken, ipython and other tests indicate that connections are made
-          and that movement though the house is still possible.
-          ipython tests show that connections are still made as predicted.
 
-
-          In [12]: house.MAP[(0,0,0)].edges
-          Out[12]: 
-    
-          [{'connection': (0, 1, 0), 'direction': 'north'},
-          {'connection': None, 'direction': ['east', 'west']},
-          {'connection': None, 'direction': ['east', 'west']}]
-
-          removing the test for now.
-          def test_if_rooms_connected(self):
+      def test_if_rooms_connected(self):
           #Check if connections can be made
 
           self.assertTrue(
@@ -552,7 +547,8 @@ If the newly discoved room has an event in it, the player must stop moving and a
           self.assertTrue(
           self.MAP[(0,0,1)].is_connected_at('down')
               )
-          """
+
+
       def test_can_move_between_rooms(self):
           pos = self.MAP[(0,0,0)]
 
@@ -628,7 +624,6 @@ We start putting things together here in the engine
   import sys
   import housemap
   import random
-  <<Character_Object>>
   house = housemap.Map()
   random.shuffle(housemap.List_of_Rooms)
   class player(object):
@@ -640,21 +635,29 @@ We start putting things together here in the engine
           return None
 
       def repl(self):
-          prompt = '==>'
+          print("Traitor pre-alpha demo")
+          print("Made by Daniel A Smith")
+          prompt = '==> '
+ 
           while True:
-
-              i = input(prompt)
-              if i == "go":
-                  direction = input("Which direction: ")
-                  self.go(direction)
-              elif i == "quit":
-                  self.quit()
-
-              elif i == "":
+              command = input(prompt)
+              command_parsed = command.split()
+              if len(command_parsed) == 0:
                   pass
+              elif command_parsed[0] == 'go':
+                  try:
+                      self.go(command_parsed[1])
+                  except IndexError:
+                      d = input("Which direction do you want to go?: ")
+                      self.go(d)
+                  except:
+                      print("Something went wrong")
+              elif command_parsed[0] == 'look':
+                  self.look()
+              elif command_parsed[0] == 'quit':
+                  self.quit()
               else:
-                  print("Im sorry Dave, I'm afraid I can't do that")
-
+                  print("Invaild command, sorry")
 
 
       def go(self,direction):
@@ -695,6 +698,13 @@ We start putting things together here in the engine
 
       def quit(self):
           sys.exit()
+
+      def look(self):
+          print("You are in the {}".format(self.pos.name))
+          print("You can go: ")
+          for edge in self.pos.edges:
+              print(edge['direction'])
+          return None
 
 
   if __name__ == '__main__':
